[gd_scene load_steps=9 format=3 uid="uid://di0ecdryl6mwm"]

[ext_resource type="Script" path="res://scripts/lobby menu.gd" id="1_ul6n2"]
[ext_resource type="Texture2D" uid="uid://b8uapn7m4qc82" path="res://assets/animal-1296970_1920.png" id="2_rr0a4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_telhf"]
texture = ExtResource("2_rr0a4")
modulate_color = Color(0.628087, 0.597238, 0.597229, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ygai"]
bg_color = Color(0.627157, 0.469996, 0.064229, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvi4i"]
bg_color = Color(0.945098, 0.721569, 0.176471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3b1qh"]
bg_color = Color(0.945098, 0.721569, 0.176471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ango"]
bg_color = Color(0.627451, 0.470588, 0.0627451, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhgf4"]
bg_color = Color(0.945098, 0.721569, 0.176471, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
shadow_size = 5

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = 368.0
offset_right = 166.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
script = ExtResource("1_ul6n2")

[node name="Panel (backg)" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -10.197
anchor_right = 36.364
offset_top = -691.0
offset_right = -0.0263672
offset_bottom = 1033.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_telhf")
metadata/_edit_use_anchors_ = true

[node name="Lobby code" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.447
anchor_right = 0.447
offset_left = -585.502
offset_top = -603.0
offset_right = 555.498
offset_bottom = -389.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Player names" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.477
anchor_right = 0.477
offset_left = -581.482
offset_top = -354.0
offset_right = 559.518
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Mizuno" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -284.0
offset_top = -116.0
offset_right = 438.0
offset_bottom = 506.0
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_2ygai")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvi4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_3b1qh")
text = "MIZUNO"
script = ExtResource("1_ul6n2")

[node name="Solitare" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 500.0
offset_top = -116.0
offset_right = 1222.0
offset_bottom = 506.0
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_2ygai")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvi4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_3b1qh")
text = "SOLITARE"
script = ExtResource("1_ul6n2")

[node name="Sandbox" type="Button" parent="."]
layout_mode = 2
offset_left = 1292.0
offset_top = -116.0
offset_right = 2014.0
offset_bottom = 506.0
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_2ygai")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jvi4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_3b1qh")
text = "SANDBOX"
script = ExtResource("1_ul6n2")

[node name="Back" type="Button" parent="."]
layout_mode = 2
offset_left = 444.0
offset_top = 692.0
offset_right = 1277.0
offset_bottom = 905.0
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = SubResource("StyleBoxFlat_6ango")
theme_override_styles/normal = SubResource("StyleBoxFlat_mhgf4")
text = "BACK"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -548.0
offset_right = 1673.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.945098, 0.721569, 0.176471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 235
text = "GAME LOBBY"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(860, 172)
zoom = Vector2(0.375, 0.375)

[connection signal="pressed" from="Mizuno" to="." method="_on_mizuno_pressed"]
[connection signal="pressed" from="Mizuno" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Mizuno" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Mizuno" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Solitare" to="." method="_on_solitare_pressed"]
[connection signal="pressed" from="Solitare" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Solitare" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Solitare" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Sandbox" to="." method="_on_sandbox_pressed"]
[connection signal="pressed" from="Sandbox" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Sandbox" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Sandbox" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_exit_pressed"]
